--- a/style.css
+++ b/style.css
@@ -136,3 +136,8 @@ body {
   transform: translate(3px, 3px);
   box-shadow: 0px 0px var(--main-color);
 }
+.preview-video video {
+  height: auto;
+  max-width: 640px;
+  min-width: 200px;
+}
